<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="nxp">NXP</string>
    <string name="mos_switch">MOS</string>
    <string name="mos_test_mode">Mos Test Mode</string>
    <string name="not_mos_test_mode">Not Mos Test Mode</string>
    <string name="sip_force_mt_session_timer">sip force mt session timer</string>
    <string name="session_timer">session timer</string>
    <string name="no_space_internal">no enough apace in internal storage</string>
    <string name="sim_invalid">SIM is invalid</string>
    <string name="apk_not_exist">this apk does not exist</string>
    <string name="not_support_visitor_or_user_mode">visitor or user mode does not support this feature</string>
    <string name="sms_over_ip_switch">SMS OVER IP</string>
    <string name="imsswitch">IMS APN</string>
    <string name="volte_switch">Volte Switch</string>
    <string name="volte_switch_waring">This action will restart the phone, whether or not to continue?</string>
    <string name="volteswitch">Volte Switch</string>
    <string name="traffic_class">traffic class:</string>
    <string name="Default_value">Default value</string>
    <string name="Self_defining_value">Self definit value</string>
    <string name="app_name">EngineerMode</string>
    <string name="tab_telephony">Telephony</string>
    <string name="tab_debug">Debug&amp;Log</string>
    <string name="tab_connectivity">Connectivity</string>
    <string name="tab_hardwaretest">HardWareTest</string>
    <string name="systeminfo">System Info</string>
    <string name="powerdissipation">Power Dissipation Setting</string>
    <string name="verinfo">Version Info</string>
    <string name="memory_info_and_usage">Memory Info And Usage</string>
    <string name="usage_top5_process">Usage Top 5 Process</string>
    <string name="cpu_info_and_usage">Cpu Info And Usage</string>
    <string name="cpu_usage">Cpu Usage</string>
    <string name="other_system_info_and_detail">Other System Info And Detail</string>
    <string name="thread_info">Thread Info</string>
    <string name="sprd_power_log">Power Log</string>
    <string name="sprd_power_log_all">All Log</string>
    <string name="sprd_power_hint_log">Power Hint Log</string>
    <string name="sprd_power_guru_log">Power Guru Log</string>
    <string name="sprd_doze_log">Doze Log</string>
    <string name="sprd_lcd_backlight_log">Lcd BackLight Log</string>
    <string name="sprd_key_wakeup_log">Key WakeUp Log</string>
    <string name="sprd_key_led_backlight_log">Key Led BackLight Log</string>
    <string name="sprd_notify_light_log">Notity Ligh Log</string>
    <string name="sprd_battery_log">Battery Log</string>
    <string name="sprd_wakelock_log">WakeLock Log</string>
    <string name="battery_log">Battery Log</string>
    <string name="build_number">Build Number</string>
    <string name="flash_block_info">Flash Block Info</string>
    <string name="cftresult">CFT Result</string>
    <string name="logsettings">Log Settings</string>
    <string name="it3">IT3</string>
    <string name="iot">IOT Test</string>
    <string name="pclog">PC Log</string>
    <string name="slogui">Slog UI</string>
    <string name="label_slogui">SlogUI</string>
    <string name="rdo_general_on">On</string>
    <string name="rdo_general_off">Off</string>
    <string name="rdo_general_lowpower">Silent</string>
    <string name="chk_general_switch">General switch</string>
    <string name="chk_general_android">Record Android log</string>
    <string name="chk_general_modem">Record modem log</string>
    <string name="chk_general_cp0">Record WCDMA Modem Log</string>
    <string name="chk_general_cp1">Record TD-SCDMA Log</string>
    <string name="chk_general_cp2">Record WCN Modem Log</string>
    <string name="chk_general_cp3">Record CP3 Log</string>
    <string name="txv_general_storagelocation">Log path</string>
    <string name="rdo_general_sdcard">SDCard</string>
    <string name="rdo_general_nand">Data directory</string>
    <string name="btn_general_clearlog">Clear logs in Log path</string>
    <string name="btn_general_dump">Dump log in SD</string>
    <string name="chk_general_snapsvc">Start screenshot service</string>
    <string name="chk_general_alwaysrun">Always showing the notification in status bar</string>
    <string name="chk_general_autoclear">HW watchdog</string>
    <string name="alert_request_dump_title">Request dumping log in SDCard</string>
    <string name="alert_request_dump_prompt">Need to dump logs in T-Card? Please ensure that you have chosen the SDCard in logpath.</string>
    <string name="toast_dump_filename_error">Please check your input, you can input latin-characters and numbers only.</string>
    <string name="chk_android_switch">Record Android Log</string>
    <string name="txv_android_branch">Subswitch</string>
    <string name="chk_android_kernel">Record kernel log</string>
    <string name="chk_android_system">Record system log</string>
    <string name="chk_android_main">Record main log</string>
    <string name="chk_android_event">Record event log</string>
    <string name="chk_android_radio">Record radio log</string>
    <string name="chk_modem_switch">Record modem log</string>
    <string name="chk_muti_modem_switch0">Record modem0 log</string>
    <string name="chk_muti_modem_switch1">Record modem1 log</string>
    <string name="txv_modem_other">Misc options</string>
    <string name="chk_modem_bluetooth">Record bluetooth log</string>
    <string name="chk_modem_tcp">Record cap log</string>
    <string name="chk_modem_misc">Record misc log</string>
    <string name="txv_alert_dump">Please input package name</string>
    <string name="txv_alert_clearlog">Really clear all logs?</string>
    <string name="alert_dump_title">Dump logs</string>
    <string name="alert_dump_dialog_ok">OK</string>
    <string name="alert_dump_dialog_cancel">Cancel</string>
    <string name="alert_clear_title">Clear logs</string>
    <string name="alert_clear_dialog_ok">Delete</string>
    <string name="alert_clear_dialog_cancel">Abort</string>
    <string name="alert_clear_string">Really clear all logs?</string>
    <string name="tabtag_tabhost_tabgeneral">General</string>
    <string name="tabtag_tabhost_tabandroid">Android Log</string>
    <string name="tabtag_tabhost_tabmodem">Modem and Misc</string>
    <string name="toast_receiver_failed">Failed to start Slog service</string>
    <string name="notification_slogsvc_title">SlogUI running in background</string>
    <string name="notification_slogsvc_prompt">Press to return SlogUI</string>
    <string name="notification_slogsvc_statusbarprompt">Starting SlogUI service</string>
    <string name="notification_snapsvc_title">SlogUI screenshot service</string>
    <string name="notification_snapsvc_prompt">Press here to screenshot now</string>
    <string name="notification_snapsvc_statusbarprompt">SlogUI screenshot service has begun</string>
    <string name="notification_low_storage_title">Storage volume is low</string>
    <string name="notification_low_storage_prompt">Please dump or clear logs in time</string>
    <string name="notification_low_storage_statusbar_prompt">Warning, storage volume is very low</string>
    <string name="progressdialog_tabhost_prompt">Please wait..</string>
    <string name="toast_snap_success">Screenshot successfully</string>
    <string name="default_apn">Default</string>
    <string name="customize">Customize</string>
    <string name="supplementary_service_query">Supplementary service query</string>
    <string name="network_mode">Network Mode</string>
    <string name="w_prefer_plus">W Prefer Plus</string>
    <string name="lte_impede_data">LTE Data Impede</string>
    <string name="gprsservice">Gprs attach/detach Service</string>
    <string name="apn_settings">Apn Settings</string>
    <string name="iot_title">IOT Setting</string>
    <string name="aocsetting_iot">Call cost setting</string>
    <string name="communitysupport_iot">Community Capability</string>
    <string name="community_cap_query">Click to Query</string>
    <string name="cta_iot_protocal_title">Protocol version setting</string>
    <string name="cta_iot_protocal_summary">Protocol version setting</string>
    <string name="cta_iot_fband_title">FBAND setting</string>
    <string name="cta_iot_fband_summary">FBAND frequency and auxiliary frequency setting</string>
    <string name="lockoperator_iot">Locking/unlocking setting</string>
    <string name="gprs_title">GPRS</string>
    <string name="autoanswer">Auto Answer</string>
    <string name="bandselect">BandSelect</string>
    <string name="netinfo">NetInfo</string>
    <string name="cat3andCat4">Query the ability of UE supports</string>
    <string name="csfb2gsm">CSFB2GSM_DELAY</string>
    <string name="netinfostatistics">Netinfo Statistics</string>
    <string name="userinfo">User Info</string>
    <string name="behaviorinfo">Behavior Info</string>
    <string name="netinforecord">Net Info</string>
    <string name="mobiledataservice">Data Services Preferred</string>
    <string name="fastdormancy">Fast Dormancy</string>
    <string name="simmelock">Sim Me Lock</string>
    <string name="videotype">Video Type</string>
    <string name="paraset">Para Set</string>
    <string name="appsettings">App Settings</string>
    <string name="qosswitch">Qos Switch</string>
    <string name="networkpersonalization">Network Personalization</string>
    <string name="networksubsetpersonalization">Network Subset Personalization</string>
    <string name="serviceproviderpersonalization">Service Provider Personalization</string>
    <string name="corporatepersonalization">Corporate Personalization</string>
    <string name="simpersonalization">SIM Personalization</string>
    <string name="sprdilog">SPRDilog</string>
    <string name="VT_option">VT Option</string>
    <string name="btn_clear_prior_information">Clear Prior Information</string>
    <string name="background_search_timer">Background Search Timer(restart invalid)</string>
    <string name="lte_timer">LTE Timer(restart invalid)</string>
    <string name="rsrp_param">RSRP Param(restart invalid)</string>
    <string name="sim_trace">Sim Trace</string>
    <string name="restart_invalid">Restart Invalid</string>
    <string name="vamos_cpc">VAMOS&#38;CPC</string>
    <string name="switch_for_usb_active">USB interface activation</string>
    <string name="uplmn_control">UPLMN Control</string>
    <string name="bih_enabled">Enable BIH</string>
    <string name="volte_setting">VoLTE Setting</string>
    <string name="nvitem_list">NV Item List</string>
    <string name="wifi_auto_auth">Wifi Auto Authentication</string>
    <string name="mode_switch">Mode Switch</string>
    <string name="sd_settings">Log storage capacity settings</string>
    <string name="sd_set_log_size">Set the size of a single log file</string>
    <string name="data_set_all_log_size">Set the size of data log file</string>
    <string name="sd_log_size_unit">（Unit: MB）</string>
    <string name="log_overwrite_enable">Log Overwrite</string>
    <string name="sd_log_set">Set the size of external log file</string>
    <string name="single_dual_sim_mode_switch">Single or dual SIM mode switch</string>
    <string name="ddr_switch">DDR Power Down</string>
    <string name="uplmnswitch">Uplmn Switch</string>
    <string name="vamos_device_capability">Device Capability</string>
    <string name="vamos_capability_report">Capability Report to N/W</string>
    <string name="vamos_working_status">Working Status</string>
    <string name="vamos_function_description">Function Description</string>
    <string name="function_description_summary">Device Capability: “Support” means this device/binary nv enabled Vamos. Otherwise, nv disabled Vamos or no Vamos code integrated.\nCapability Report to N/W: Set Vamos capability reported to N/W.\nWorking Status: Whether this device is working at Vamos or not.</string>
</resources>