<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/iot_title" >

    <com.sprd.engineermode.EMSwitchPreference
        android:key="aocsetting_iot"
        android:title="@string/aocsetting_iot" >
    </com.sprd.engineermode.EMSwitchPreference>

    <ListPreference
        android:defaultValue="3"
        android:dialogTitle="@string/cta_iot_protocal_title"
        android:entries="@array/cta_iot_protocal_entries"
        android:entryValues="@array/cta_iot_protocal_values"
        android:key="cta_iot_protocal"
        android:summary="@string/cta_iot_protocal_summary"
        android:title="@string/cta_iot_protocal_title" />

    <Preference
        android:key="communitysupport_iot"
        android:summary="@string/community_cap_query"
        android:title="@string/communitysupport_iot" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.sprd.engineermode.debuglog.CommunityCapActivity"
            android:targetPackage="com.sprd.engineermode" />
    </Preference>

    <ListPreference
        android:dialogTitle="@string/cta_iot_fband_title"
        android:entries="@array/cta_iot_fband_entries"
        android:entryValues="@array/cta_iot_fband_values"
        android:key="cta_iot_fband"
        android:summary="@string/cta_iot_fband_summary"
        android:title="@string/cta_iot_fband_title" />

    <Preference
        android:key="lockoperator_iot"
        android:title="@string/lockoperator_iot" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.sprd.engineermode.debuglog.LockFrequencyActivity"
            android:targetPackage="com.sprd.engineermode" >
        </intent>
    </Preference>
    <Preference
        android:key="gprsservice"
        android:title="@string/gprsservice" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.sprd.engineermode.debuglog.GPRSAttachServiceActivity"
            android:targetPackage="com.sprd.engineermode" >
        </intent>
    </Preference>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/supplementary_service_query_entries"
        android:entryValues="@array/supplementary_service_query_values"
        android:key="supplementary_service_query"
        android:title="@string/supplementary_service_query" />
    <com.sprd.engineermode.EMSwitchPreference
			android:key="uplmn_control"
			android:title="@string/uplmn_control" >
	</com.sprd.engineermode.EMSwitchPreference>
	<Preference
        android:key="bih_enabled_key"
        android:title="@string/bih_enabled" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.sprd.engineermode.debuglog.BinEnableSimSeleActivity"
            android:targetPackage="com.sprd.engineermode" >
        </intent>
    </Preference>
</PreferenceScreen>
