<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="RRM" >

    <Preference
        android:key="gprsservice"
        android:title="@string/gprsservice" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.sprd.engineermode.debuglog.GPRSAttachServiceActivity"
            android:targetPackage="com.sprd.engineermode" >
        </intent>
    </Preference>
    <Preference
        android:key="supplementary_service_query"
        android:title="@string/supplementary_service_query" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.sprd.engineermode.ServiceQuery"
            android:targetPackage="com.sprd.engineermode" />
    </Preference>

    <PreferenceScreen android:title="@string/apn_settings" >
        <Preference android:title="@string/default_apn" >
        </Preference>
        <Preference
            android:enabled="false"
            android:title="@string/customize" >
        </Preference>
    </PreferenceScreen>

</PreferenceScreen>